[package]
name = "learning"
version = "0.1.0"
authors = ["taoxiaojie <308512341@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.10.0"
async-std = { version = "1.6.0", features = ["attributes"] }
sqlx = { version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "mysql"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
tokio-tungstenite = "0.10.1"
tokio = "0.2.21"
futures-util = "0.3.5"
async-trait = "0.1.35"
lazy_static = "1.4.0"
redis = "0.16.0"
dotenv = "0.15.0"
async_init={path="./crates/async_init"}
acm={path="./crates/acm"}
sql-builder = "0.12.2"
