[package]
name = "async_init"
version = "0.1.0"
authors = ["tj <308512341@qq.com>"]
edition = "2018"
description="init object asynchronously without Arc<Mutex>"
license = "MIT"

[lib]
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "async_init"
doc = false
path = "src/main.rs"

[dependencies]
syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
Inflector="0.11.4"
regex = "1.3.9"
